examples/test/testpolicy3185.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3185
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key9: value10
      key27: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value38
      podSelector:
        matchLabels:
          key43: value0
          key30: value20
